<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="tab_text_movies">Movies</string>
    <string name="tab_text_tvshows">Tv Shows</string>
    <string name="content_tab_text">This is Fragment </string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="img_poster_desc">This is poster of the movie or tv show</string>
    <string name="lbl_movie_director">Director</string>
    <string name="lbl_movie_genre">Genre</string>
    <string name="lbl_overview">Overview</string>
    <string name="lbl_separator">|</string>
    <string name="star_logo">star logo</string>
    <string name="lang_setting">Languange Setting</string>
    <string-array name="data_movie_title">
        <item>Bohemian Rhapsody (2018)</item>
        <item>Creed II (2018)</item>
        <item>Once Upon a Deadpool (2018)</item>
        <item>How to Train Your Dragon: The Hidden World (2019)</item>
        <item>Dragon Ball Super: Broly (2018)</item>
        <item>Glass (2019)</item>
        <item>Hunter Killer (2018)</item>
        <item>Spider-Man: Into the Spider-Verse (2018)</item>
        <item>The Mule (2018)</item>
        <item>Venom (2018)</item>
    </string-array>
    <string-array name="data_movie_director">
        <item>Bryan Singer</item>
        <item>Steven Caple Jr.</item>
        <item>David Leitch</item>
        <item>Dean DeBlois</item>
        <item>Tatsuya Nagamine</item>
        <item>M. Night Shyamalan</item>
        <item>Donovan Marsh</item>
        <item>Rodney Rothman</item>
        <item>Clint Eastwood</item>
        <item>Ruben Fleischer</item>
    </string-array>
    <string-array name="data_movie_overview">
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder &amp; zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what\'s this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Earl Stone, a man in his eighties, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he\'s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="data_movie_user_score">
        <item>80%</item>
        <item>67%</item>
        <item>67%</item>
        <item>77%</item>
        <item>75%</item>
        <item>66%</item>
        <item>64%</item>
        <item>84%</item>
        <item>66%</item>
        <item>66%</item>
    </string-array>
    <string-array name="data_movie_runtime">
        <item>2h 15min</item>
        <item>2h 10min</item>
        <item>1h 57min</item>
        <item>1h 44min</item>
        <item>1h 41min</item>
        <item>2h 09min</item>
        <item>2h 02min</item>
        <item>1h 57min</item>
        <item>1h 57min</item>
        <item>1h 52min</item>
    </string-array>
    <string-array name="data_movie_genres">
        <item>Drama, Music</item>
        <item>Drama</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Fantasy, Adventure</item>
        <item>Thriller, Drama, Science Fiction</item>
        <item>Action, Thriller</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Crime, Drama, Thriller</item>
        <item>Science Fiction, Action</item>
    </string-array>
    <string-array name="data_movie_poster">
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>
    </string-array>
    <string-array name="data_tvshows_title">
        <item>Arrow (2012)</item>
        <item>Family Guy (1999)</item>
        <item>The Flash (2014)</item>
        <item>Game Of Thrones (2011)</item>
        <item>Gotham (2014)</item>
        <item>Marvel\'s Iron Fist (2017)</item>
        <item>Naruto Shippūden (2007)</item>
        <item>Supernatural (2005)</item>
        <item>The Simpsons (1989)</item>
        <item>The Walking Dead (2010)</item>
    </string-array>
    <string-array name="data_tvshows_crew">
        <item>Greg Berlanti, Marc Guggenheim, Andrew Kreisberg</item>
        <item>Seth MacFarlane</item>
        <item>Geoff Johns, Andrew Kreisberg, Greg Berlanti</item>
        <item>David Benioff, D. B. Weiss</item>
        <item>Bruno Heller</item>
        <item>Scott Buck</item>
        <item>Masashi Kishimoto</item>
        <item>Eric Kripke</item>
        <item>Matt Groening</item>
        <item>Frank Darabont</item>
    </string-array>
</resources>