<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/poster_venom"
                android:contentDescription="@string/img_poster_desc"/>

            <TextView
                android:id="@+id/txt_title"
                style="@style/movieTitle"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/img_poster"
                android:text="@string/movie_title" />

            <TextView
                android:id="@+id/txt_description"
                style="@style/content"
                android:layout_below="@id/txt_title"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/img_poster"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/movie_overview" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>